--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,23 @@
     <string name="sample_title_observable">Observable</string>
     <string name="sample_title_viewwithids">View with IDs</string>
 
+    <!--ResourceActivity-->
+    <string name="nameFormat">Full Name: %1$s:%2$s</string>
+    <string name="nameFormatWithAge">Hello %1$s %2$s, %3$d ages</string>
+
+    <plurals name="banana">
+        <item quantity="zero">zero bananas</item>
+        <item quantity="one">one banana</item>
+        <item quantity="two">two bananas</item>
+        <item quantity="few">few bananas</item>
+        <item quantity="many">many bananas</item>
+        <item quantity="other">other bananas</item>
+    </plurals>
+
+    <plurals name="orange">
+        <item quantity="one">Have an orange</item>
+        <item quantity="other">Have %d oranges</item>
+    </plurals>
+
+
 </resources>
