--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,7 @@
         <item quantity="other">Have %d oranges</item>
     </plurals>
 
+    <string name="firstName">Albet</string>
+    <string name="lastName">Einstein</string>
 
 </resources>
