--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,8 @@
 
     <string name="firstName">Albet</string>
     <string name="lastName">Einstein</string>
+    <!--ConversionsActivity-->
+    <string name="red">red</string>
+    <string name="white">white</string>
 
 </resources>
